kubernetes/apps/database/mosquitto/app/tcproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tcproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: mosquitto
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: mqtts
  rules:
    - backendRefs:
        - name: mosquitto
          port: 1883
